# x-ai

./: README.md
.github/workflows/: build-mcp-plugin.yml
agentic-ais/atc/: .env.example  README.md  pyproject.toml  test.py
agentic-ais/atc/src/atc_ai/: __init__.py  atc_tools.py  config.py  copilot_auth.py  copilot_autogen_client.py  copilot_experts.py  main.py  runtime.py  xplane_mcp.py
agentic-ais/atc/src/xai_agentic_atc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agentic-ais/cfi/: .env.example  .gitignore  README.md  plane_memory.json  pyproject.toml
agentic-ais/cfi/src/cfi_ai/: __init__.py  agent_team.py  cfi_tools.py  coach.py  config.py  copilot_auth.py  copilot_autogen_client.py  flight_phase.py  hazard_monitor.py  main.py  mcp_client.py  review_window.py  rules.py  runtime.py  types.py  xplane_mcp.py  xplane_udp.py
agentic-ais/cfi/src/cfi_ai/memory/: __init__.py  base.py  providers.py
agentic-ais/cfi/src/cfi_ai/prompts/: master_cfi.md  phase_approach.md  phase_cruise.md  phase_descent.md  phase_initial_climb.md  phase_landing.md  phase_preflight.md  phase_takeoff.md  phase_taxi_in.md  phase_taxi_out.md
agentic-ais/cfi/src/xai_agentic_cfi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic-ais/cfi/tests/: test_agent_team.py  test_coach_fallback.py  test_flight_phase.py  test_hazard_monitor.py  test_mcp_client.py  test_rules.py  test_runtime_integration.py  test_runtime_logic.py  test_udp.py
mcp-server/: CMakeLists.txt  README.md
mcp-server/src/: plugin_main.cpp  plugin_server.cpp  plugin_server.hpp
mcp-server/src/server/: plugin_server_datarefs.cpp  plugin_server_navigation.cpp  plugin_server_objects.cpp  plugin_server_plugins.cpp  plugin_server_runtime.cpp  plugin_server_tool_methods.inc  tool_common.cpp  tool_common.hpp
